# Flappy-Birds

./: .gitignore  CMakeLists.txt  Readme.md
modules/: Animation.h  CMakeLists.txt  Controller.h  Environment.h  Physics.h  Player.h
resources/: CMakelists.txt
src/: CMakeLists.txt  main.cpp
